# q-imgen

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
docs/: design-rationale.md  maintainer-notes.md  usage.md
skills/q-imgen/: SKILL.md
skills/q-imgen/evals/: evals.json
skills/q-imgen/references/: history-queries.md  models.md  nanobanana-batch-format.md  output-format.md  python-api.md  troubleshooting.md  update-check.md  user-notes.md
src/q_imgen/: __init__.py  __main__.py  api.py  banana_provider.py  channels.py  cli.py  config.py  gemini_client.py  history.py  limiter.py  openai_client.py  openai_images_client.py  routing.py
tests/: __init__.py  live_banana_smoke.py  test_api.py  test_banana_provider.py  test_channels.py  test_cli.py  test_clients.py  test_config.py  test_history.py  test_limiter.py  test_routing.py
